# tree-sitter-bicep

./: CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: bump.yml  ci.yml  lint.yml  publish.yml  release.yml  test.yml
bindings/c/: tree-sitter-bicep.h  tree-sitter-bicep.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_bicep/: __init__.py  binding.c
bindings/rust/: README.md  build.rs  lib.rs
bindings/swift/: bicep.h
bindings/swift/TreeSitterBicepTests/: TreeSitterBicepTests.swift
queries/: highlights.scm  locals.scm
script/: known_failures.txt  parse-examples
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: tests.txt
