[package]
name = "tree-sitter-bicep"
description = "Bicep grammar for tree-sitter"
version = "1.1.0"
authors = ["Amaan Qureshi <amaanq12@gmail.com>"]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "tree-sitter", "bicep"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/amaanq/tree-sitter-bicep"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.21.0"

[build-dependencies]
cc = "1.0"
